cabal-version:       2.2
name:                ihp-router
version:             1.0.0
synopsis:            Trie-based routing with a Yesod-style DSL for WAI
description:
    A path-indexed trie router exposed as a standard WAI 'Middleware', with a
    Template Haskell @[routes|...|]@ quasi-quoter for declaring routes
    explicitly. Originally extracted from the IHP framework's routing layer.
    .
    Plain WAI users can pull this in standalone — there is no IHP dependency.
    The DSL emits a @\<ctrlLower>Trie :: (Controller -> Application) -> RouteTrie@
    binding per controller; plug it into 'IHP.Router.Middleware.routeTrieMiddleware'
    and you have a working WAI router with explicit RESTful routes, type-safe
    captures, and compile-time validation.
license:             MIT
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          hello@digitallyinduced.com
homepage:            https://ihp.digitallyinduced.com/
bug-reports:         https://github.com/digitallyinduced/ihp/issues
copyright:           (c) digitally induced GmbH
category:            Web
stability:           Stable
tested-with:         GHC == 9.10.3
build-type:          Simple
extra-source-files:  changelog.md

source-repository head
    type:     git
    location: https://github.com/digitallyinduced/ihp

common shared-properties
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , BlockArguments
        , LambdaCase
        , TemplateHaskell
        , OverloadedRecordDot
    ghc-options: -Werror=incomplete-patterns -Werror=unused-imports -Werror=missing-fields

library
    import: shared-properties
    hs-source-dirs: .
    exposed-modules:
        IHP.Router.Trie
        , IHP.Router.Middleware
        , IHP.Router.UrlGenerator
        , IHP.Router.Capture
        , IHP.Router.DSL.AST
        , IHP.Router.DSL.Parser
        , IHP.Router.DSL.Runtime
        , IHP.Router.DSL.TH
        , IHP.Router.WAI
    build-depends:
        base >= 4.17.0 && < 4.22
        , bytestring
        , text
        , containers
        , unordered-containers
        , http-types
        , wai
        , template-haskell
        , haskell-src-meta
        , uuid
        , time
