cabal-version:       2.2
name:                ihp-sitemap
version:             1.5.0
synopsis:            SEO
description:         Render sitemaps with IHP
license:             MIT
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          support@digitallyinduced.com
homepage:            https://ihp.digitallyinduced.com/
bug-reports:         https://github.com/digitallyinduced/ihp/issues
copyright:           (c) digitally induced GmbH
category:            SEO
build-type:          Simple
extra-source-files:  changelog.md

source-repository head
    type:     git
    location: https://github.com/digitallyinduced/ihp.git

common ihp-std
    default-language: GHC2021
    default-extensions:
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        DuplicateRecordFields
        DisambiguateRecordFields
        TypeApplications
        TemplateHaskell
        QuasiQuotes
        PackageImports
        ScopedTypeVariables
        BlockArguments
        OverloadedStrings
        ImplicitParams
    ghc-options: -Werror=incomplete-patterns -Werror=unused-imports -Werror=missing-fields

library
    import: ihp-std
    build-depends:
          base >= 4.17.0 && < 4.22
        , text
        , ihp
        , blaze-html
        , blaze-markup
        , wai
    hs-source-dirs: .
    exposed-modules:
        IHP.SEO.Sitemap.ControllerFunctions
        , IHP.SEO.Sitemap.Routes
        , IHP.SEO.Sitemap.Types

test-suite tests
    import: ihp-std
    type: exitcode-stdio-1.0
    main-is: SEO/Sitemap.hs
    build-depends:
        base >= 4.17.0 && < 4.22
        , hspec
        , ihp
        , ihp-hspec
        , ihp-sitemap
        , wai
        , wai-extra
        , http-types
        , ihp-hsx
        , ihp-log
    hs-source-dirs: Test